Bug 42558 - FORMATTING: Missing Arabic Abjad numerals for page numbers
Summary: FORMATTING: Missing Arabic Abjad numerals for page numbers
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: BSA target:3.7.0 target:4.0.0 target:...
Keywords:
Depends on:
Blocks: Arabic-and-Farsi Numbering-Formats
  Show dependency treegraph
 
Reported: 2011-11-03 07:34 UTC by Munzir Taha
Modified: 2017-10-12 15:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Page_Numbering-Patch (7.57 KB, patch)
2012-06-13 01:27 UTC, Faisal Menawer
Details
new Page Numbering (8.01 KB, patch)
2012-06-27 03:32 UTC, Faisal Menawer
Details
adding "None" option back (1.19 KB, patch)
2012-11-14 05:11 UTC, Faisal Menawer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Munzir Taha 2011-11-03 07:34:35 UTC
Problem description: 
Format -> Bullets and Numbering... -> Options -> Numbering has Arabic alphabet أ، ب، ت but we are missing the more correct and widely used abjad order: أبجد هوز

Steps to reproduce:
1. Format -> Bullets and Numbering... -> Options
2. Click the Numbering drop-down menu
3. There is no أبجد هوز alphabet order

Current behavior:
Only أ، ب، ت order is available

Expected behavior:
The requested alphabet order should be available for numbering here and for page numbers as well. For the letters and more info check http://en.wikipedia.org/wiki/Abjad_numerals

Platform (if different from the browser): 
Browser: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.2 (KHTML, like Gecko) Ubuntu/11.10 Chromium/15.0.874.106 Chrome/15.0.874.106 Safari/535.2
Comment 1 Munzir Taha 2011-12-25 07:23:14 UTC
I see there is a progress in 3.5 beta. The
Comment 2 Munzir Taha 2011-12-25 07:27:45 UTC
I retested 3.5 Beta2 and Bullets and Numbering now have Arabic alphabet. The only missing part is to have it on page numbers as well. Isn't it better to make both page numbering and Numbering of lists read from the same files?
Comment 3 Munzir Taha 2012-05-20 08:12:09 UTC
Format -> Page -> Page -> Format drop down menu still hasn't those options. I still cannot not use Abjad numerals for page numbers. Reopening
Comment 4 Faisal Menawer 2012-06-06 02:33:51 UTC
Hi

I will try to fix this bug.
Comment 5 Faisal Menawer 2012-06-13 01:27:06 UTC
Created attachment 62955 [details]
Page_Numbering-Patch
Comment 6 Munzir Taha 2012-06-17 15:18:57 UTC
@Faisal:
Did this patch applied upstream? Is there a link where we can download a libreoffice version with the bug fixed so I can review and confirm?

I will reopen the bug because I cannot confirm the fix, yet.
Comment 7 Faisal Menawer 2012-06-27 03:32:46 UTC
Created attachment 63508 [details]
new Page Numbering
Comment 8 Caolán McNamara 2012-06-28 08:27:29 UTC
This patch is in danger of slipping through the cracks. It's best to mail it to the libreoffice@lists.freedesktop.org list (no need to subscribe) with [PATCH] in the title.

caolanm->erack: Can you have a look at this.
Comment 9 Not Assigned 2012-06-29 11:10:35 UTC
Faisal M. Al-Otaibi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5d61932cb6c92954d808cf8d65a460ea19d5799

fdo#42558 added Arabic Abjad and other known numberings to Page Numbering
Comment 10 Not Assigned 2012-06-29 11:11:00 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88a083f8be05449630c9e2af30474281fd0d8af2

fdo#42558 consolidated duplicated code
Comment 11 Eike Rathke (retired, only occasionally showing up) 2012-06-29 11:18:07 UTC
(In reply to comment #7)
> Created attachment 63508 [details]
> new Page Numbering

Hi Faisal,
Good catch, thanks for the patch.
As the code was almost identical to the one for the numbering listbox I consolidated both into one method, see my additional commit.

As this seems to be your first contribution (or at least we don't have your license statement on file), could you please write a short notice with a blanket statement that you contribute this and further patches under LGPLv3+ and MPL 1.1 to the dev mailing list libreoffice@lists.freedesktop.org (no subscription required).

Thanks
  Eike
Comment 12 Michael Meeks 2012-06-30 02:05:20 UTC
Your mail will end up in good company linked to here:

http://wiki.documentfoundation.org/Development/Developers

Thanks ! :-)
Comment 13 Faisal Menawer 2012-08-26 05:08:06 UTC
hi

i have a question.
is this bug has been fixed on libreoffice 3.6?


Thanks
  Faisal
Comment 14 Eike Rathke (retired, only occasionally showing up) 2012-08-27 08:52:50 UTC
(In reply to comment #13)
> is this bug has been fixed on libreoffice 3.6?

No, 3-6 had already been branched off when the patch went to master, it will be in upcoming 3.7
Comment 15 Eike Rathke (retired, only occasionally showing up) 2012-11-12 15:59:28 UTC
@Faisal:
This change removed the "None" option from the page numbering to not have page numbers in an otherwise unchanged footer with a page number field and as such introduces a regression. Could you please come up with a fix for that? Thanks.
Comment 16 Faisal Menawer 2012-11-14 05:11:32 UTC
Created attachment 70051 [details]
adding "None" option back

hi,

This patch return the "None" option back.
Comment 17 Eike Rathke (retired, only occasionally showing up) 2012-11-14 22:33:07 UTC
Great, thanks!
Comment 18 Not Assigned 2012-11-14 22:38:02 UTC
Faisal M. Al-Otaibi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c004e70aa44910d28d27e0b4cf837b3bbb85c5c

fdo#42558 Re-adding the "None" option to the page numbering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Not Assigned 2012-11-15 06:49:40 UTC
Faisal M. Al-Otaibi committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf05f252ea3af8f6a1543ec52081f53cbcb2cc07&g=libreoffice-3-6

fdo#42558 added Arabic Abjad and other known numberings to Page Numbering


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.