fdo#42558 added Arabic Abjad and other known numberings to Page Numbering

(cherry picked from commit e5d61932cb6c92954d808cf8d65a460ea19d5799)

fdo#42558 consolidated duplicated code

* Moved almost identical code of
  SvxNumOptionsTabPage::SvxNumOptionsTabPage() and
  SvxPageDescPage::SvxPageDescPage() into static
  SvxNumOptionsTabPage::GetI18nNumbering()
* Removed now unnecessary includes and using namespace directives

(cherry picked from commit 88a083f8be05449630c9e2af30474281fd0d8af2)

fdo#42558 Re-adding the "None" option to the page numbering

(cherry picked from commit 8c004e70aa44910d28d27e0b4cf837b3bbb85c5c)

Squashed all three commits into one.
Signed-off-by: Eike Rathke <erack@redhat.com>

Change-Id: I3be59d92da8444f12855fcfac78c465d2a547b2d